hphp/hack/test/typecheck/readonly/readonly_closure_expand.php.exp
File "readonly_closure_expand.php", line 13, characters 10-11:
This function call returns a readonly value. It must be explicitly wrapped in a readonly expression. (Typing[4412])
  File "readonly_closure_expand.php", line 9, characters 39-66:
  The function call is defined here.
